--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,10 @@
 \include{00-titlepage.tex}
 
 \chapter*{Introduction}
-This is the introduction to the Standard Documenting Guideline and Data Dictionary.
+The purpose of this document is to standardize the Electronic Healthcare Record (EHR) documention created at East Baton Rouge Parish Emergency Medical Services.
+
+\chapter*{Abbreviations and Definitions}
+EHR - Electronic Healthcare Record - A document containing all information relevant to a patient encounter and subsequent treatment provided.
 
 \tableofcontents
 
