--- a/00-titlepage/00-titlepage.tex
+++ b/00-titlepage/00-titlepage.tex
@@ -1,6 +1,6 @@
 \begin{titlepage}
     \begin{center}
-        \includegraphics{ebr.png}
+        \includegraphics{00-titlepage/ebr.png}
         \vspace*{0.5in}
         \huge
         \textbf{\\East Baton Rouge Parish \\ Emergency Medical Services\\}
