--- a/01-incidents-tab/01-incident-tab.tex
+++ b/01-incidents-tab/01-incident-tab.tex
@@ -16,9 +16,11 @@
         | >{\centering\arraybackslash}X 
         | >{\raggedleft\arraybackslash}X | }
         \hline
-        NEMSIS: Mandatory & Department: Required & Billing: N/A \\ 
+            \multicolumn{3}{l}{NEMSIS: Mandatory & NEMSIS Dataset Level: National && NEMSIS Attributes: N,L \\ }
         \hline
-        AAA: Recommended & AHA: Recommended &  \\ 
+        Department: Required & Billing: N/A \\ 
+        \hline
+        AAA: Recommended & AHA: N/A  \\ 
         \hline
     \end{tabularx}
 \end{center}
