--- a/main.tex
+++ b/main.tex
@@ -2,12 +2,13 @@
 \usepackage{array}
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
+\usepackage{multicol}
 \usepackage{multirow}
 \usepackage{tabularx}
 
 \begin{document}    
 
-\include{00-titlepage.tex}
+\include{00-titlepage/00-titlepage.tex}
 
 \chapter*{Introduction}
 The purpose of this document is to standardize the Electronic Healthcare Record (EHR) documention created at East Baton Rouge Parish Emergency Medical Services.
@@ -17,7 +18,7 @@ EHR - Electronic Healthcare Record - A document containing all information relev
 
 \tableofcontents
 
-\include{01-incident-tab.tex}
-\include{02-patient-tab.tex}
+\include{01-incidents-tab/01-incident-tab.tex}}
+\include{02-patient-tab/02-patient-tab.tex}
 
 \end{document}
