--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 \documentclass{report}
 \usepackage{array}
 \usepackage[utf8]{inputenc}
+\usepackage[letterpaper, portrait, margin=1in]{geometry}
 \usepackage{graphicx}
 \usepackage{multicol}
 \usepackage{multirow}
@@ -18,7 +19,7 @@ EHR - Electronic Healthcare Record - A document containing all information relev
 
 \tableofcontents
 
-\include{01-incidents-tab/01-incident-tab.tex}}
+\include{01-incidents-tab/01-incident-tab.tex}
 \include{02-patient-tab/02-patient-tab.tex}
 
 \end{document}
