--- a/01-incidents-tab/01-incident-tab.tex
+++ b/01-incidents-tab/01-incident-tab.tex
@@ -2,29 +2,29 @@
     \section{Reponse}
         \subsection{Incident Number}
             \begin{center}
-                \begin{tabular}{|l|l|l|}
+                \begin{tabular}{|p{0.30\linewidth}|p{0.40\linewidth}|p{0.25\linewidth}|}
                     \hline
-                        NEMSIS Usage: Optional & NEMSIS Dataset Level: National & NEMSIS Attributes: N,L \\ 
+                        NEMSIS Usage: Required & NEMSIS Dataset Level: National,State & NEMSIS Attributes: N,L \\ 
                     \hline
-                        \multicolumn{1}{|l|}{NEMSIS Dataset Section:} & \multicolumn{2}{|c|}{eDispatch.03 - EMD Card Number} \\
+                        \multicolumn{1}{|l|}{NEMSIS Dataset Section:} & \multicolumn{2}{|c|}{eResponse.03 - Incident Number} \\
                     \hline
-                        Department Usage: Required & Billing: N/A & \\ 
+                        Department Usage: Required & Billing: Required & \\ 
                     \hline
-                        AAA: Recommended & AHA: Recommended & \\ 
+                        AAA: N/A & AHA: N/A & \\ 
                     \hline
                 \end{tabular}
             \end{center}
         \subsection{Run Number}
             \begin{center}
-                \begin{tabular}{|l|l|l|}
+                \begin{tabular}{|p{0.30\linewidth}|p{0.40\linewidth}|p{0.25\linewidth}|}
                     \hline
-                        NEMSIS Usage: Optional & NEMSIS Dataset Level: National & NEMSIS Attributes: N,L \\ 
+                        NEMSIS Usage: Required & NEMSIS Dataset Level: National,State & NEMSIS Attributes: N,L \\ 
                     \hline
-                        \multicolumn{1}{|l|}{NEMSIS Dataset Section:} & \multicolumn{2}{|c|}{eDispatch.03 - EMD Card Number} \\
+                        \multicolumn{1}{|l|}{NEMSIS Dataset Section:} & \multicolumn{2}{|c|}{eResponse.04 - EMS Response Number} \\
                     \hline
-                        Department Usage: Required & Billing: N/A & \\ 
+                        Department Usage: \textbf{Not Used} & Billing: N/A & \\ 
                     \hline
-                        AAA: Recommended & AHA: Recommended & \\ 
+                        AAA: N/A & AHA: N/A & \\ 
                     \hline
                 \end{tabular}
             \end{center}
